# symsorter

./: .gitignore  BUILD_EXE.md  LICENSE  MANIFEST.in  README.md  build_exe.bat  build_exe.py  pyproject.toml  symsorter_installer.iss
symsorter/: CHANGELOG.md  CONTRIBUTING.md  __init__.py  cli.py  clip_encode.py  config.py  gui.py  gui_main.py  image_browser.py  install_dev.py
symsorter/examples/: basic_usage.py
symsorter/tests/: test_basic.py
